# webdavit

./: .gitignore  pyproject.toml  test_webdavit.py
.github/workflows/: build.yml  publish.yml
